# SubscriptionService

./: .env.example  .gitignore  README.md  docker-compose.yml  dockerfile  nginx.conf  pyproject.toml
src/: manage.py
src/apps/back/: api_urls.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/apps/sub/: apps.py  beats.py  exceptions.py  logic.py  models.py  serializers.py  sub_types.py  tasks.py  types.py  utils.py  views.py
src/apps/sub/migrations/: 0001_initial.py
src/lib/django_utils/: pagination.py
src/scripts/: celery.py
